--- a/etc/fpm/fpm-pool-common.conf
+++ b/etc/fpm/fpm-pool-common.conf
@@ -2,7 +2,8 @@ group = www-data
 listen.owner = www-data
 listen.group = www-data
 listen.mode = 0660
-listen.allowed_clients = 127.0.0.1,128.199.184.246
+listen.backlog = 65535
+; listen.allowed_clients = 127.0.0.1
 
 pm = ondemand
 pm.process_idle_timeout = 10s
@@ -12,7 +13,6 @@ ping.path = /fpm-ping
 ping.response = pong
 slowlog = /var/log/php/fpm-$pool-slow.log
 request_slowlog_timeout = 60s
-listen.backlog = 65535
 
 env[HOSTNAME] = $HOSTNAME
 env[PATH] = /usr/local/bin:/usr/bin:/bin
